--- a/demo/frontend/.env
+++ b/demo/frontend/.env
@@ -1,2 +1,6 @@
 NEXT_PUBLIC_THE_MOVIE_DB_V3_API_KEY=
 NEXT_PUBLIC_THE_MOVIE_DB_V3_BASE_URL=
+
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+NEXT_PUBLIC_SUPABASE_URL=
+  
