--- a/demo/frontend/package.json
+++ b/demo/frontend/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^1.6.2",
+        "@supabase/supabase-js": "^2.39.1",
         "bowser": "^2.11.0",
         "cookie": "^0.4.1",
         "hls.js": "^1.1.5",
